I add some notes

--- a/train_test_splitting.ipynb
+++ b/train_test_splitting.ipynb
@@ -1,46 +1,82 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create small dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "DATASET_SIZE = 20"
+    "DATASET_SIZE = 20\n",
+    "RANDOM_STATE = 42\n",
+    "\n",
+    "X = list(range(DATASET_SIZE))\n",
+    "np.random.seed(42)\n",
+    "y = np.random.randint(2, size=DATASET_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Spliting techniques\n",
+    "\n",
+    "The simplest technique to split a data set since we have shuffle it, firstly."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0])"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train: [8, 5, 11, 3, 18, 16, 13, 2, 9, 19, 4, 12, 7, 10, 14, 6]\n",
+      "X_test: [0, 17, 15, 1]\n",
+      "y_train: [0 1 0 0 1 1 0 0 1 0 0 0 0 0 1 0]\n",
+      "y_test: [0 1 0 1]\n"
+     ]
     }
    ],
    "source": [
-    "# np.random.seed(42)\n",
-    "# X = np.random.randint(DATASET_SIZE,size=DATASET_SIZE)\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, shuffle=True, test_size=0.2, random_state=RANDOM_STATE)\n",
     "\n",
-    "X = list(range(DATASET_SIZE))\n",
+    "print('X_train:',X_train)\n",
+    "print('X_test:',X_test)\n",
+    "print('y_train:',y_train)\n",
+    "print('y_test:',y_test)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cross validation using Stratified spliting technique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## klearn.model_selection.StratifiedShuffleSplit\n",
     "\n",
-    "np.random.seed(42)\n",
-    "y = np.random.randint(2, size=DATASET_SIZE)\n",
-    "y"
+    "if you want to take n times shuffled and with the same analogy in terms of target's categories thry the follow one:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +109,7 @@
    ],
    "source": [
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
-    "stratidied_splitter1 = StratifiedShuffleSplit(n_splits=3, test_size=0.2, random_state=42)\n",
+    "stratidied_splitter1 = StratifiedShuffleSplit(n_splits=3, test_size=0.2, random_state=RANDOM_STATE)\n",
     "\n",
     "for train_index , test_index in stratidied_splitter1.split(X, y):\n",
     "    print('train_index')\n",
@@ -85,17 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "stratidied_splitter2 = StratifiedKFold(n_splits=3, shuffle=True, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -127,27 +153,20 @@
     }
    ],
    "source": [
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "stratidied_splitter2 = StratifiedKFold(n_splits=3, shuffle=True, random_state=RANDOM_STATE)\n",
+    "\n",
     "for train_index , test_index in stratidied_splitter2.split(X, y):\n",
     "    print('train_index')\n",
     "    print(train_index)\n",
     "    print('test_index')\n",
     "    print(test_index)\n",
-    "    print('\\n\\n')\n"
+    "    print('\\n\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import StratifiedGroupKFold\n",
-    "stratidied_splitter3 = StratifiedKFold(n_splits=3, shuffle=True, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -179,6 +198,9 @@
     }
    ],
    "source": [
+    "from sklearn.model_selection import StratifiedGroupKFold\n",
+    "stratidied_splitter3 = StratifiedKFold(n_splits=3, shuffle=True, random_state=RANDOM_STATE)\n",
+    "\n",
     "for train_index , test_index in stratidied_splitter3.split(X, y):\n",
     "    print('train_index')\n",
     "    print(train_index)\n",
@@ -189,17 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
-    "stratidied_splitter4 = RepeatedStratifiedKFold(n_splits=3,n_repeats=4, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -294,6 +306,9 @@
     }
    ],
    "source": [
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "stratidied_splitter4 = RepeatedStratifiedKFold(n_splits=3,n_repeats=4, random_state=RANDOM_STATE)\n",
+    "\n",
     "for train_index , test_index in stratidied_splitter4.split(X, y):\n",
     "    print('train_index')\n",
     "    print(train_index)\n",
